chỉnh sửa trang đăng nhập
Chỉnh sửa trang đăng nhập (bỏ tích chọn 2 cái. Thống nhất là sinh viên
đăng nhập vào trang, còn giảng viên có cách đăng nhập khác)

--- a/WebsiteCaNhan4/trangdangky.html
+++ b/WebsiteCaNhan4/trangdangky.html
@@ -144,7 +144,7 @@
 							<div class="row">
 							    <div class="col-xs-12 col-sm-6 col-md-8 col-sm-offset-2 col-md-offset-2">
 									<form role="form">
-										<h2 style="color: blue; font-weight: bold;">Đăng nhập</h2>
+										<h2 style="color: blue; font-weight: bold;">Register</h2>
 										<hr class="colorgraph">
 										<div class="row">
 											<div class="col-xs-12 col-sm-6 col-md-6">
@@ -205,13 +205,7 @@
 											<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
 										</div>
 										<div class="modal-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, itaque, modi, aliquam nostrum at sapiente consequuntur natus odio reiciendis perferendis rem nisi tempore possimus ipsa porro delectus quidem dolorem ad.</p>
+											<p>Hello</p>
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
