--- a/WebsiteCaNhan4/Tichdangnhap.html
+++ b/WebsiteCaNhan4/Tichdangnhap.html
@@ -140,47 +140,38 @@
 			<div class="container-fluid">
 				<div class="row vdivide">
 					<div class="col-md-9">
-						<div class="panel-heading">
-							<div class="panel-title text-left">
-								<h2 class="title">Đăng nhập</h2>
-								<hr />
+						<div id = "Formregister">
+							<div class="row" style="margin-top:20px">
+							    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+									<form role="form">
+										<fieldset>
+											<h2 style="color: blue; font-weight: bold;">Sign In</h2>
+											<hr class="colorgraph">
+											<div class="form-group">
+							                    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
+											</div>
+											<div class="form-group">
+							                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
+											</div>
+											<span class="button-checkbox">
+												<button type="button" class="btn" data-color="info">Remember Me</button>
+							                    <input type="checkbox" name="remember_me" id="remember_me" checked="checked" class="hidden">
+												<a href="" class="btn btn-link pull-right">Forgot Password?</a>
+											</span>
+											<hr class="colorgraph">
+											<div class="row">
+												<div class="col-xs-6 col-sm-6 col-md-6">
+							                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Sign In">
+												</div>
+												<div class="col-xs-6 col-sm-6 col-md-6">
+													<a href="" class="btn btn-lg btn-primary btn-block">Register</a>
+												</div>
+											</div>
+										</fieldset>
+									</form>
+								</div>
 							</div>
-							 <div class="jumbotron">
-							  <form class="form-horizontal">
-							    <div class="form-group">
-							      <label class="control-label col-sm-2" for="text">Tên đăng nhập:</label>
-							      <div class="col-sm-10">
-							        <input type="text" class="form-control" id="text" placeholder="Nhập tên đăng nhập">
-							      </div>
-							    </div>
-							    <div class="form-group">
-							      <label class="control-label col-sm-2" for="pwd">Mật khẩu:</label>
-							      <div class="col-sm-10">
-							        <input type="password" class="form-control" id="pwd" placeholder="Nhập mật khẩu">
-							      </div>
-							    </div>
-							    <div class="form-group">
-							      <div class="col-sm-offset-2 col-sm-10">
-							      <div>
-							        <div class="checkbox">
-							          <label><input type="checkbox"> Sinh viên</label>
-							      
-							          <label><input type="checkbox"> Giảng viên</label>
-							        </div>
-							        </div>
-							      </div>
-							    </div>
-							    <div class="form-group">
-							      <div class="col-sm-offset-2 col-sm-10">
-							        <button type="submit" class="btn btn-default">Đăng nhập</button>
-							        <a href="#" data-toggle="remember" >Quên mật khẩu</a>
-
-							      </div>
-							    </div>
-							  </form>
-							 </div>
-						</div> 
-						
+						</div>
 					</div>
 					<div class="col-md-3">
 						<div class="datepicker-here" data-language='en'></div>
