--- a/WebsiteCaNhan4/dangkykhoahoc.html
+++ b/WebsiteCaNhan4/dangkykhoahoc.html
@@ -312,7 +312,7 @@
 								<p>👉<strong> EMAIL: pilu15051996@gmail.com</strong></p>
 								<p>👉<strong> FANPAGE: <a href="#" target="_blank">https://www.facebook.com/thienthien.1551996</a></strong></p>
 
-								<p>Một lần nữa xin cảm ơn tất cả các bạn đã và đang ủng hộ, học tập tại Myclass.vn. Chúng tôi luôn đồng hành và luôn tâm huyết để tạo ra những khoá học chất lượng tốt nhất, bám sát nhu cầu tuyển dụng thực tế đế đáp ứng niềm đam mê Lập trình của các bạn.</p>
+								<p>Một lần nữa xin cảm ơn tất cả các bạn đã và đang ủng hộ, học tập tại Nhom14LTW.it.vn. Chúng tôi luôn đồng hành và luôn tâm huyết để tạo ra những khoá học chất lượng tốt nhất, bám sát nhu cầu tuyển dụng thực tế đế đáp ứng niềm đam mê Lập trình của các bạn.</p>
 
 								<p>Xin cảm ơn các bạn.</p>
 														
