--- a/WebsiteCaNhan4/trangchitietbaigianggv.html
+++ b/WebsiteCaNhan4/trangchitietbaigianggv.html
@@ -238,6 +238,35 @@
 							</div>
 							<div style="margin-bottom :20px" class="datepicker-here" data-language='en'></div>
 						</div>
+						<!-- Trigger the modal with a button -->
+						<button style="margin-left :80px" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Thông báo</button>
+						<!-- Modal -->
+						<div class="modal fade" id="myModal" role="dialog">
+						   <div class="modal-dialog">
+						      <!-- Modal content-->
+						      <div class="modal-content">
+						         <div class="modal-header">
+						            <button type="button" class="close" data-dismiss="modal">&times;</button>
+						            <h4 class="modal-title">Thông báo</h4>
+						         </div>
+						         <div class="modal-body">
+						               <form>
+									   <div class="form-group">
+									      <label for="tenthongbao">Tên Thông Báo:</label>
+									      <input type="text" class="form-control" id="tenthongbao">
+									   </div>
+									   <div class="form-group">
+									      <label for="noidungthongbao">Nội Dung Thông Báo:</label>
+									      <input type="text" class="form-control" id="noidungthongbao">
+									   </div>
+									</form>
+						         </div>
+						         <div class="modal-footer">
+						            <button type="button" class="btn btn-default" data-dismiss="modal">Đăng Thông Báo</button>
+						         </div>
+						      </div>
+						   </div>
+						</div>
 					</div>
 				</div>
 
