trang tạo bài kiểm tra
trang tạo bài kiểm tra

--- a/WebsiteCaNhan4/trangtaobaikiemtra.html
+++ b/WebsiteCaNhan4/trangtaobaikiemtra.html
@@ -97,9 +97,9 @@
                     <div class="row">
                         <div class="col-md-12">
                            <div class="panel panel-info">
-                                        <div class="panel-heading">Tạo bài trắc nghiệm</div>
+                                        <div class="panel-heading">Tạo bài kiểm tra/div>
                                         <div class="panel-body">
-                                            <h3> Tên bài trắc ngiệm </h3>
+                                            <h3> Tên bài kiểm tra </h3>
                                             <table class="table">
                                                 <tbody>
 
