--- a/WebsiteCaNhan4/trangdangky.html
+++ b/WebsiteCaNhan4/trangdangky.html
@@ -21,7 +21,9 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
 	<script src="jquery/jquery-3.1.0.js"></script>
-
+	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js">
+	</script>
 </head>
 
 <body>
@@ -203,7 +205,7 @@
 					</div>
 				</div>
 			</div>
-			<!--End Divide Body->
+			<!--End Divide Bodu->
 		</div>
 		<!--End Content-->
 			<!--Footer-->
