--- a/WebsiteCaNhan4/trangtaobaikiemtra.html
+++ b/WebsiteCaNhan4/trangtaobaikiemtra.html
@@ -97,7 +97,7 @@
                     <div class="row">
                         <div class="col-md-12">
                            <div class="panel panel-info">
-                                        <div class="panel-heading">Tạo bài kiểm tra/div>
+                                        <div class="panel-heading">Tạo bài kiểm tra</div>
                                         <div class="panel-body">
                                             <h3> Tên bài kiểm tra </h3>
                                             <table class="table">
