chỉnh sửa lần 1
chhinhr sửa các form

--- a/WebsiteCaNhan4/chinhsuabaigianggiaovien.html
+++ b/WebsiteCaNhan4/chinhsuabaigianggiaovien.html
@@ -103,10 +103,10 @@
 		<!-- End Header -->
 		<!--Content-->
 		<div class="content">
-		<!--Devide Body-->
+			<!--Devide Body-->
 			<div class="content-body">
-				<div class="container">
-					<div class="col-md-12 table-border">
+				<div class=" container">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2  table-content">
 						<h2>Chỉnh sửa bài giảng</h2>
 						<form class="form-horizontal">
 							<div class="form-group">
@@ -147,12 +147,13 @@
 							<button type="button" class="btn btn-info"> Lưu lại </button>
 							<button type="button" class="btn btn-danger"> Hủy</button>
 						</form>
-
 					</div>
 				</div>
 			</div>
+
+			
 			<!--End Divide Bodu->
-		</div>
+	
 		<!--End Content-->
 			<!--Footer-->
 			<div class="footer" class="row">
