--- a/WebsiteCaNhan4/trangchitietbaigianggv.html
+++ b/WebsiteCaNhan4/trangchitietbaigianggv.html
@@ -9,41 +9,11 @@
 	<!-- CSS Riêng -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="img/icon.ico" />
-	<!-- Dong Ho -->
-	<link href="css/datepicker.css" rel="stylesheet">
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/datepicker.js"></script>
-	<script src="js/datepicker.en.js"></script>
-	<!-- End DongHo -->
+
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
 	<script src="jquery/jquery-3.1.0.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			if ($('#back-to-top').length) {
-			    var scrollTrigger = 10, // px
-			    backToTop = function () {
-			    	var scrollTop = $(window).scrollTop();
-			    	if (scrollTop > scrollTrigger) {
-			    		$('#back-to-top').fadeIn();
-			    	} else {
-			    		$('#back-to-top').fadeOut();
-			    	}
-			    };
-			    backToTop();
-			    $(window).on('scroll', function () {
-			    	backToTop();
-			    });
-			    $('#back-to-top').on('click', function (e) {
-			    	e.preventDefault();
-			    	$('html,body').animate({
-			    		scrollTop: 0
-			    	}, 700);
-			    });
-			}
-		});
 
-	</script>
 
 
 </head>
@@ -98,7 +68,7 @@
 			<!--Chia Khung-->
 			<div class="container-fluid">
 				<div class="row vdivide">
-					<div class="col-md-9 table-content">
+					<div class="col-xs-12 col-sm-9 col-md-9 col-sm-offset-2 col-md-offset-2 table-content">
 						<button type = "submit" class = "btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</button>
 						<button type = "submit" class = "btn btn-default"><span class="glyphicon glyphicon-remove"></span> Xóa</button>
 						<h1>Bạn đang xem bài giảng </h1>
@@ -216,30 +186,9 @@
 							
 
 						</div>
-						<div class="col-md-3">
-							<div class="row">
-								<div class="col-sm-12 col-md-12">
-									<div class="thumbnail">
-										<img src="img/logo.jpg" alt="avatar">
-										<div class="caption">
-											<div class="list-group">
-												<a href="#" class="list-group-item active">
-													Tên USER
-												</a>
-												<a href="#" class="list-group-item">Khóa Học</a>
-												<a href="#" class="list-group-item">Thông Tin Cá Nhân</a>
-												<a href="#" class="list-group-item">Tin Nhắn</a>
-												<a href="#" class="list-group-item">Đăng Xuất</a>
-											</div>
-
-										</div>
-									</div>
-								</div>
-							</div>
-							<div style="margin-bottom :20px" class="datepicker-here" data-language='en'></div>
-						</div>
+					
 						<!-- Trigger the modal with a button -->
-						<button style="margin-left :80px" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Thông báo</button>
+						<button style="margin-left:250px, margin-top: 50px" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Thông báo</button>
 						<!-- Modal -->
 						<div class="modal fade" id="myModal" role="dialog">
 						   <div class="modal-dialog">
@@ -271,28 +220,24 @@
 				</div>
 
 				<!--End Chia Khung-->
-			</div>
+		
 			<!--End Content-->
 			<!--Footer-->
-			<div id="footer" class="row">
-				<div class="col-md-6">
-					<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg">
-					&copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
-				</div>
-				<div class="col-md-6 powered">
-					<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-facebook"></i></a>
-					<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-youtube"></i></a>
-					<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-google-plus"></i></a>
-
-				</div>
-			</div>
-			<!-- End Footer-->
-
-			<img id="back-to-top" src="img/back-to-top.png">
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-			<!-- Tích hợp JS của Bootstrap -->
-			<script src="js/bootstrap.min.js"></script>
+			 <div class="footer" class="row">
+                <div class="container">
+                    <div class="col-md-12 text-center">
+                        <img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
+                    </div>
+                </div>
+            </div>
+            <!-- End Footer-->
+        </div>
+        <img id="back-to-top" src="img/back-to-top.png">
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Tích hợp JS của Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
 		</body>
 
 		</html>
