--- a/WebsiteCaNhan4/trangtaobaitracnghiem.html
+++ b/WebsiteCaNhan4/trangtaobaitracnghiem.html
@@ -114,7 +114,7 @@
                                             <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-send"></span> Tạo</button>
                                         </div>
 
-                                s</div>
+                                </div>
                         </div>
                     </div>
                 </div>        
