--- a/WebsiteCaNhan4/Tichdangnhap.html
+++ b/WebsiteCaNhan4/Tichdangnhap.html
@@ -121,23 +121,7 @@
 					</a>
 				</div>
 			</div>
-			<!-- End Slider Image-->
-
-			<!--Navbar-->
-			<div class="navbar">
-				<nav class="navbar navbar-light" style="background-color: #1B5A96;">
-					<ul class="nav navbar-nav">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Giới thiệu</a>
-						</li>
-
-					</ul>
-				</nav>
-			</div>
-			<!-- End Navbar-->
+			<!-- End Slider Image-->		
 
 			<!--Chia Khung-->
 			<div class="container-fluid">
@@ -148,26 +132,25 @@
 							    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 									<form role="form">
 										<fieldset>
-											<h2 style="color: blue; font-weight: bold;">Sign In</h2>
+											<h2 style="color: blue; font-weight: bold;">Đăng nhập</h2>
 											<hr class="colorgraph">
 											<div class="form-group">
-							                    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
+							                    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Địa chỉ email">
 											</div>
 											<div class="form-group">
-							                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
+							                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Mật khẩu">
 											</div>
-											<span class="button-checkbox">
-												<button type="button" class="btn" data-color="info">Remember Me</button>
+											<span class="button-checkbox">											
 							                    <input type="checkbox" name="remember_me" id="remember_me" checked="checked" class="hidden">
-												<a href="" class="btn btn-link pull-right">Forgot Password?</a>
+												<a href="" class="btn btn-link pull-right">Quên mật khẩu</a>
 											</span>
 											<hr class="colorgraph">
 											<div class="row">
 												<div class="col-xs-6 col-sm-6 col-md-6">
-							                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Sign In">
+							                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Đăng nhập">
 												</div>
 												<div class="col-xs-6 col-sm-6 col-md-6">
-													<a href="" class="btn btn-lg btn-primary btn-block">Register</a>
+													<a href="trangdangky.html" class="btn btn-lg btn-primary btn-block">Đăng ký</a>
 												</div>
 											</div>
 										</fieldset>
