--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -97,8 +97,8 @@
 
 								<li class=""><a href="#" class="main-menu">Liên hệ </a></li>
 
-								<li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Nhập </a></li>
-								<li class=""><a href="#" class="main-menu"> Đăng Ký </a></li>
+								<li style="margin-left:5em" class=""><a href="Tichdangnhap.html" class="main-menu"> Đăng Nhập </a></li>
+								<li class=""><a href="trangdangky.html" class="main-menu"> Đăng Ký </a></li>
 								<li class="button-search">
 									<p class="main-menu"><i class="fa fa-search"></i></p>
 								</li>
@@ -168,21 +168,21 @@
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="trangdangkykhoahoc.html"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
 											<div class="avatar-list">
 												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
 												<div class="tongbaihoc">71 bài học</div>
 												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
-												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
+												<a href="trangdangkykhoahoc.html" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
 											</div>
 										</div>
 
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
+											<h4 class="block_title"><a href="trangdangkykhoahoc.html" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
-												<h5 class="course_instructor"><a href="#">Tên giảng viên </br>Java Web Developer</a>
+												<h5 class="course_instructor"><a href="trangdangkykhoahoc.html">Tên giảng viên </br>Java Web Developer</a>
 														</h5>
 											</div>
 											<div class="item-action"></div>
