--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -97,8 +97,8 @@
 
 								<li class=""><a href="#" class="main-menu">Liên hệ </a></li>
 
-								<li><button type="button" class="btn" data-toggle="modal" data-target=".loginModal"><u style = "color: blue">Đăng nhập</u></button></li>
-								<li><button type="button" class="btn" data-toggle="modal" data-target=".registerModal"><u style = "color: blue">Đăng ký</u></button></li>
+								<li><button type="button" id="btnd" class="btn" data-toggle="modal" data-target=".loginModal"><u style = "color: blue">Đăng nhập</u></button></li>
+								<li><button type="button" id="btnd" class ="btn" data-toggle="modal" data-target=".registerModal"><u style = "color: blue">Đăng ký</u></button></li>
 								<li class="button-search">
 									<p class="main-menu"><i class="fa fa-search"></i></p>
 								</li>
